--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,5 +5,7 @@
 @layer base {
     html {
         font-family: Poppins, sans-serif;
+        font-weight: 100;
+        @apply text-white;
     }
 }
